Fixed Navigation Design issue in Mobile and Tablet and horizontal scroll issue fixed

--- a/css/style.css
+++ b/css/style.css
@@ -120,3 +120,25 @@ border-color: #bce8f1;
         -webkit-transform: rotate(180deg);
           transform: rotate(180deg);
     }
+    
+    .navbar-brand {
+        position: absolute;
+        width: 100%;
+        left: 0;
+        top: 0;
+        text-align: center;
+        margin: auto;
+    }
+    .navbar-toggle {
+        z-index:3;
+    }
+    
+    .navbar-inverse .navbar-toggle{
+        border-color: #ffffff;
+    }
+    .navbar-inverse .navbar-toggle:focus, .navbar-inverse .navbar-toggle:hover{
+        background-color: #fcb040;
+    }
+    .navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form{
+        border-color: rgba(255, 255, 255, 0);
+    }
